--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,14 +10,7 @@
       }
     </style>
     <ul class="link">
-      <li><a href="/docs/intro/">Introduction</a></li>
-      <li><a href="/docs/getting-started/">Getting Started</a></li>
-      <li><a href="/docs/installation/">Installation</a></li>
-      <li><a href="/docs/configuration/">Configuration</a></li>
-      <li><a href="/docs/usage/">Usage</a></li>
-      <li><a href="/docs/advanced-usage/">Advanced Usage</a></li>
-      <li><a href="/docs/troubleshooting/">Troubleshooting</a></li>
-      <li><a href="/docs/contributing/">Contributing</a></li>
-      <li><a href="/docs/changelog/">Changelog</a></li>
+      <li><a href="/docs/intro/">Resume</a></li>
+      <li><a href="/docs/getting-started/">Posts</a></li>
     </ul>
   </div>
